# TinyMLZoo

./: README.md  setup.cfg
unsupervised/: k-means.py
