[metadata]
name = tinymlzoo
version = 1.0
author = Rajul
description = Machine Learning algorithms from scratch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prepatdiscobj/TinyMLZoo
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt